--- a/notebook/group_assignment.ipynb
+++ b/notebook/group_assignment.ipynb
@@ -1938,11 +1938,20 @@
     "    sns.boxplot(data=df, x=c, y=\"Price (USD)\", hue=c, ax=axs[l])\n",
     "    axs[l].set_ylabel(\"Price\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modelling"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1956,7 +1965,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
