--- a/notebook/group_assignment.ipynb
+++ b/notebook/group_assignment.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "(1359, 21)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
        "max     108.000000     48.000000        3.000000  174990.000000  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
        "4          2340                402.69  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +915,7 @@
        " 'mPhone']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
        "4                    LG G8X ThinQ       LG  South Korea"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1038,7 +1038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1180,7 +1180,7 @@
        "9          255  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1371,7 @@
        "9          255   Mid Range  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1394,7 +1394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1429,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1682,7 +1682,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1723,7 +1723,7 @@
        "Text(0.5, 1.0, 'Bar Chart of Price Range')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1765,7 +1765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1774,7 +1774,7 @@
        "Text(0.5, 1.0, 'Histogram of Rear Camera (Megapixels)')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1825,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1834,7 +1834,7 @@
        "Text(0.5, 1.0, 'Bar Chart of Brand Origin')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1916,7 +1916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1941,7 +1941,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 1359 entries, 0 to 1358\n",
+      "Data columns (total 25 columns):\n",
+      " #   Column                  Non-Null Count  Dtype   \n",
+      "---  ------                  --------------  -----   \n",
+      " 0   Name                    1359 non-null   object  \n",
+      " 1   Brand                   1359 non-null   object  \n",
+      " 2   Brand Origin            1359 non-null   object  \n",
+      " 3   Brand Top Price         1359 non-null   int64   \n",
+      " 4   Model                   1359 non-null   object  \n",
+      " 5   Battery capacity (mAh)  1359 non-null   int64   \n",
+      " 6   Touchscreen             1359 non-null   int64   \n",
+      " 7   Resolution x            1359 non-null   int64   \n",
+      " 8   Resolution y            1359 non-null   int64   \n",
+      " 9   Screen size (inches)    1359 non-null   float64 \n",
+      " 10  Pixel per inch (PPI)    1359 non-null   float64 \n",
+      " 11  Processor               1359 non-null   int64   \n",
+      " 12  RAM (GB)                1359 non-null   float64 \n",
+      " 13  Internal storage (GB)   1359 non-null   float64 \n",
+      " 14  Rear camera             1359 non-null   float64 \n",
+      " 15  Front camera            1359 non-null   float64 \n",
+      " 16  Operating system        1359 non-null   object  \n",
+      " 17  Wi-Fi                   1359 non-null   int64   \n",
+      " 18  Bluetooth               1359 non-null   int64   \n",
+      " 19  GPS                     1359 non-null   int64   \n",
+      " 20  Number of SIMs          1359 non-null   int64   \n",
+      " 21  3G                      1359 non-null   int64   \n",
+      " 22  4G/ LTE                 1359 non-null   int64   \n",
+      " 23  Price (USD)             1359 non-null   int64   \n",
+      " 24  Price Range             1359 non-null   category\n",
+      "dtypes: category(1), float64(6), int64(13), object(5)\n",
+      "memory usage: 267.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Android', 'iOS', 'Cyanogen', 'BlackBerry', 'Windows', 'Tizen',\n",
+       "       'Sailfish'], dtype=object)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"Operating system\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2015,8 +2084,8 @@
     "        return 'Android'\n",
     "    elif 'windows' in os:\n",
     "        return 'Windows'\n",
-    "    elif 'mac' in os or 'ios' in os:\n",
-    "        return 'Mac'\n",
+    "    elif 'ios' in os:\n",
+    "        return 'iOS'\n",
     "    else:\n",
     "        return 'Other'\n",
     "\n",
@@ -2027,11 +2096,13 @@
     "\n",
     "# --- Step 3: Convert Price Range into Ordinal Encoding ---\n",
     "price_range_mapping = {\n",
-    "    'Entry Level': 0,\n",
-    "    'Mid Range': 1,\n",
-    "    'Upper Mid': 2,\n",
-    "    'Flagship': 3\n",
-    "}\n",
+    "    \"Ultra Budget\": 0, \n",
+    "    \"Budget\": 1, \n",
+    "    \"Mid Range\": 2, \n",
+    "    \"Upper Mid\": 3, \n",
+    "    \"Premium\": 4, \n",
+    "    \"Flagship\": 5\n",
+    "    }\n",
     "df['Price Range'] = df['Price Range'].map(price_range_mapping)\n",
     "\n",
     "# --- Step 4: Create Interaction Terms ---\n",
