with first model

--- a/notebook/model_development_template.ipynb
+++ b/notebook/model_development_template.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,17 +153,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Accuracy: 0.6985\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[149  28   1   0   0   0]\n",
+      " [ 26  33   5   2   2   0]\n",
+      " [  1   8   6   0   0   0]\n",
+      " [  0   2   0   2   1   0]\n",
+      " [  0   2   0   1   0   0]\n",
+      " [  0   1   0   0   2   0]]\n",
+      "\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.85      0.84      0.84       178\n",
+      "           1       0.45      0.49      0.46        68\n",
+      "           2       0.50      0.40      0.44        15\n",
+      "           3       0.40      0.40      0.40         5\n",
+      "           4       0.00      0.00      0.00         3\n",
+      "           5       0.00      0.00      0.00         3\n",
+      "\n",
+      "    accuracy                           0.70       272\n",
+      "   macro avg       0.37      0.35      0.36       272\n",
+      "weighted avg       0.70      0.70      0.70       272\n",
+      "\n",
+      "\n",
+      "Feature Importance:\n",
+      "                    Feature  Importance\n",
+      "16     Pixel per inch (PPI)    0.292687\n",
+      "17          Brand Top Price    0.141983\n",
+      "20  Battery-to-Screen Ratio    0.079875\n",
+      "19        Performance Score    0.079252\n",
+      "0    Battery capacity (mAh)    0.072444\n",
+      "18             Camera Score    0.051661\n",
+      "8              Front camera    0.042703\n",
+      "1      Screen size (inches)    0.031926\n",
+      "4              Resolution y    0.027582\n",
+      "5                 Processor    0.021895\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\danie\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\danie\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n",
+      "c:\\Users\\danie\\anaconda3\\Lib\\site-packages\\sklearn\\metrics\\_classification.py:1509: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, f\"{metric.capitalize()} is\", len(result))\n"
+     ]
+    }
+   ],
    "source": [
-    "# Put your model development procedure here"
+    "# Put your model development procedure here\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    "from sklearn.metrics import classification_report\n",
+    "\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Standardize features\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# Create and train the Decision Tree model\n",
+    "dt_model = DecisionTreeClassifier(random_state=42)\n",
+    "dt_model.fit(X_train_scaled, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred = dt_model.predict(X_test_scaled)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "conf_matrix = confusion_matrix(y_test, y_pred)\n",
+    "class_report = classification_report(y_test, y_pred)\n",
+    "\n",
+    "print(f\"Decision Tree Accuracy: {accuracy:.4f}\")\n",
+    "print(\"\\nConfusion Matrix:\")\n",
+    "print(conf_matrix)\n",
+    "print(\"\\nClassification Report:\")\n",
+    "print(classification_report(y_test, y_pred, zero_division=0))\n",
+    "\n",
+    "\n",
+    "# Feature importance\n",
+    "feature_importance = pd.DataFrame({\n",
+    "    'Feature': X.columns,\n",
+    "    'Importance': dt_model.feature_importances_\n",
+    "}).sort_values('Importance', ascending=False)\n",
+    "\n",
+    "print(\"\\nFeature Importance:\")\n",
+    "print(feature_importance.head(10))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -177,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
